--- a/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Generos/Genero.cshtml
+++ b/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Generos/Genero.cshtml
@@ -14,6 +14,9 @@
 				<div class="group">
 					<input type="submit" class="button" value="Guardar">
 				</div>
+				<div class="group">
+					<label for="user" class="label">Prueba GitHub</label>
+				</div>
 				<div class="hr"></div>
 			</div>
 		</div>
