--- a/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Historial/DetalleHist.cshtml
+++ b/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Historial/DetalleHist.cshtml
@@ -56,7 +56,8 @@ a{color:inherit;text-decoration:none}
 	height:100%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
-	background:rgba(40,57,101,.9);
+	/*background:rgba(40,57,101,.9);*/
+	background:rgba(40,57,101,.3);
 }
 .login-html .sign-in-htm{
 	top:0;
@@ -114,7 +115,7 @@ a{color:inherit;text-decoration:none}
 	border:none;
 	padding:15px 20px;
 	border-radius:25px;
-	background:rgba(255,255,255,.1);
+	background:rgba(40,57,101,.9);
 }
 
 .login-form .group input[data-type="password"]{
@@ -122,7 +123,7 @@ a{color:inherit;text-decoration:none}
 	-webkit-text-security:circle;
 }
 .login-form .group .label{
-	color:#aaa;
+	/*color:#aaa;*/
 	font-size:12px;
 }
 .login-form .group .button{
