--- a/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Razas/Raza.cshtml
+++ b/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Razas/Raza.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
-@model VeterinariaWeb.App.Frontend.Pages.GeneroModel
+@model VeterinariaWeb.App.Frontend.Pages.RazaModel
 @{
 }
 <div class="login-wrap">
 	<div class="login-html">
-		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Genero</label>
+		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Raza</label>
 		<div class="login-form">
 			<div class="sign-in-htm">
 				<div class="group">
@@ -15,7 +15,7 @@
 				<div class="group">
 					<table class="gen-table">
 						<tr>
-							<th>GENERO</th>
+							<th>Razas</th>
   						</tr>
 					</table>
 				</div>
