--- a/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Generos/Genero">Genero</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Razas/Raza">Raza</a>
+                        </li>
                     </ul>
                 </div>
             </div>
