--- a/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -18,6 +18,12 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Visita/Visita">Reporte de Visita</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Propietario/Propietario">Propietarios</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Historial/DetalleHist">Detalle Historial</a>
                         </li>
