--- a/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -22,7 +22,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Visita/Visita">Reporte de Visita</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Veterinario/Veterinario">Detalle Historial</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Propietario/Propietario">Propietarios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/HistoriaClinica/HistoriaClinica">Detalle Historial</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Historial/DetalleHist">Detalle Historial</a>
