--- a/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Veterinario/Veterinario.cshtml
+++ b/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Veterinario/Veterinario.cshtml
@@ -1,25 +1,31 @@
 @page
-@model VeterinariaWeb.App.Frontend.Pages.PropietarioModel
+@model VeterinariaWeb.App.Frontend.Pages.VeterinarioModel
 @{
 }
 <div class="login-wrap">
 	<div class="login-html">
-		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Propietario</label>
+		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Veterinario</label>
 		<div class="login-form">
 			<div class="sign-in-htm">
 				<div class="group">
-					<label for="user" class="label">Tipo Identificación</label> <input id="user" type="text" class="input">
-                    <label for="user" class="label">Número Identificación</label> <input id="user" type="text" class="input">
-                    <label for="user" class="label">Nombres</label> <input id="user" type="text" class="input">
-                    <label for="user" class="label">Apellidos</label> <input id="user" type="text" class="input">
-                    <label for="user" class="label">Dirección</label> <input id="user" type="text" class="input">
-                    <label for="user" class="label">Teléfono</label> <input id="user" type="text" class="input">
+					<label for="user" class="label">Tipo Identificación</label>
+					<input id="user" type="text" class="input">
+                    <label for="user" class="label">Número Identificación</label>
+					<input id="user" type="text" class="input">
+                    <label for="user" class="label">Nombres</label>
+					<input id="user" type="text" class="input">
+                    <label for="user" class="label">Apellidos</label>
+					<input id="user" type="text" class="input">
+                    <label for="user" class="label">Teléfono</label>
+					<input id="user" type="text" class="input">
+                    <label for="user" class="label">Tarjeta Profesional</label>
+					<input id="user" type="text" class="input">
 				</div>
 				<div class="hr"></div>
 				<div class="group">
 					<table class="gen-table">
 						<tr>
-							<th>Propietario</th>
+							<th>Veterinario</th>
   						</tr>
 					</table>
 				</div>
