Ajuste a páginas propietario, veterinario, visita

--- a/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/HistoriaClinica/HistoriaClinica.cshtml
+++ b/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/HistoriaClinica/HistoriaClinica.cshtml
@@ -11,11 +11,11 @@
 					<label for="user" class="label">Fecha Apertura</label>
 					<input id="user" type="text" class="input">
                     <label for="user" class="label">Veterinaria</label>
-					<input id="user" type="text" class="input">
+					<input id="user" type="number" class="input">
                     <label for="user" class="label">Propietario</label>
-					<input id="user" type="text" class="input">
+					<input id="user" type="number" class="input">
                     <label for="user" class="label">Mascota</label>
-					<input id="user" type="text" class="input">
+					<input id="user" type="number" class="input">
 				</div>
 				<div class="hr"></div>
 				<div class="group">
