--- a/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Historial/DetalleHist.cshtml
+++ b/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Historial/DetalleHist.cshtml
@@ -17,6 +17,9 @@
 				</div>
 				<div class="group">
 					<input type="submit" class="button" value="Guardar">
+					<input type="submit" class="button" value="Consultar">
+					<input type="submit" class="button" value="Modificar">
+					<input type="submit" class="button" value="Eliminar">
 				</div>
 				<div class="hr"></div>
 			</div>
