--- a/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Home</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Inicio</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,19 +22,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Visita/Visita">Reporte de Visita</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Veterinario/Veterinario">Detalle Historial</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Veterinario/Veterinario">Datos Veterinario</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Propietario/Propietario">Propietarios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/HistoriaClinica/HistoriaClinica">Detalle Historial</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/HistoriaClinica/HistoriaClinica">Historia Clínica</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Historial/DetalleHist">Detalle Historial</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Generos/Genero">Genero</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Generos/Genero">Género</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Razas/Raza">Raza</a>
