Se adiciona formularios de empresa y mascota

--- a/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -39,6 +39,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Razas/Raza">Raza</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Mascota/Mascota">Datos Mascota</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Empresa/Empresa">Datos Empresa</a>
+                        </li>
                     </ul>
                 </div>
             </div>
