--- a/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Empresa/Empresa.cshtml
+++ b/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Empresa/Empresa.cshtml
@@ -1,27 +1,39 @@
 ﻿@page
-@model VeterinariaWeb.App.Frontend.Pages.DetalleHistModel
+@model VeterinariaWeb.App.Frontend.Pages.EmpresaModel
 @{
 }
 <div class="login-wrap">
 	<div class="login-html">
-		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Detalle Historial</label>
+		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Empresa</label>
 		<div class="login-form">
 			<div class="sign-in-htm">
 				<div class="group">
-					<label for="user" class="label">Historial</label>
+					<label for="user" class="label">Nit</label>
 					<input id="user" type="text" class="input">
 				</div>
 				<div class="group">
-					<label for="user" class="label">Visita</label>
+					<label for="user" class="label">Razon Social</label>
 					<input id="user" type="text" class="input">
 				</div>
+                <div class="group">
+					<label for="user" class="label">Dirección</label>
+					<input id="user" type="text" class="input">
+				</div>
+                <div class="group">
+					<label for="user" class="label">Telefono</label>
+					<input id="user" type="text" class="input">
+				</div>
+                <div class="group">
+					<label for="user" class="label">Correo Electronico</label>
+					<input id="user" type="text" class="input">
+				</div>
+                <div class="hr"></div>
 				<div class="group">
 					<input type="submit" class="button" value="Guardar">
 					<input type="submit" class="button" value="Consultar">
 					<input type="submit" class="button" value="Modificar">
 					<input type="submit" class="button" value="Eliminar">
 				</div>
-				<div class="hr"></div>
 			</div>
 		</div>
 	</div>
@@ -41,8 +53,8 @@ a{color:inherit;text-decoration:none}
 .login-wrap{
 	width:100%;
 	margin:auto;
-	max-width:525px;
-	min-height:525px;
+	max-width:670px;
+	min-height:690px;
 	position:relative;
 	/*background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;*/
     background:url(https://image.winudf.com/v2/image1/bGl0dGxlYXBwYXMuZG9nLndhbGxwYXBlcnNfc2NyZWVuXzdfMTU2ODgyODc5M18wODg/screen-7.jpg?fakeurl=1&type=.jpg) no-repeat center;
@@ -177,7 +189,7 @@ a{color:inherit;text-decoration:none}
 
 .hr{
 	height:2px;
-	margin:60px 0 50px 0;
+	margin:10px 0 10px 0;
 	background:rgba(255,255,255,.2);
 }
 .foot-lnk{
