--- a/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Mascota/Mascota.cshtml
+++ b/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Mascota/Mascota.cshtml
@@ -1,18 +1,40 @@
 ﻿@page
-@model VeterinariaWeb.App.Frontend.Pages.DetalleHistModel
+@model VeterinariaWeb.App.Frontend.Pages.MascotaModel
 @{
 }
 <div class="login-wrap">
 	<div class="login-html">
-		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Detalle Historial</label>
+		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Mascota</label>
 		<div class="login-form">
 			<div class="sign-in-htm">
 				<div class="group">
-					<label for="user" class="label">Historial</label>
+					<label for="user" class="label">Nombre</label>
 					<input id="user" type="text" class="input">
 				</div>
 				<div class="group">
-					<label for="user" class="label">Visita</label>
+					<label for="user" class="label">Color</label>
+					<input id="user" type="text" class="input">
+				</div>
+                <div class="group">
+                    <label for="user" class="label">Genero</label>
+                    <select class="input">
+                        <option value="+47">Hembra</option>
+                        <option value="+46">Macho</option>
+                    </select>
+                </div>
+                <div class="group">
+                    <label for="user" class="label">Fecha Nacimiento</label>
+                    <input id="FechaHora" type="date" size=30 class="input">
+                </div>
+                <div class="group">
+                    <label for="user" class="label">Raza</label>
+                    <select class="input">
+                        <option value="+47"></option>
+                        <option value="+46"></option>
+                    </select>
+                </div>
+                <div class="group">
+					<label for="user" class="label">Color</label>
 					<input id="user" type="text" class="input">
 				</div>
 				<div class="group">
@@ -41,8 +63,8 @@ a{color:inherit;text-decoration:none}
 .login-wrap{
 	width:100%;
 	margin:auto;
-	max-width:525px;
-	min-height:525px;
+	max-width:660px;
+	min-height:750px;
 	position:relative;
 	/*background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;*/
     background:url(https://image.winudf.com/v2/image1/bGl0dGxlYXBwYXMuZG9nLndhbGxwYXBlcnNfc2NyZWVuXzdfMTU2ODgyODc5M18wODg/screen-7.jpg?fakeurl=1&type=.jpg) no-repeat center;
