Ajuste propiedades para visita, veterinario, historia clinica, genero, detalle historia

--- a/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/HistoriaClinica/HistoriaClinica.cshtml
+++ b/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/HistoriaClinica/HistoriaClinica.cshtml
@@ -50,8 +50,8 @@ a{color:inherit;text-decoration:none}
 .login-wrap{
 	width:100%;
 	margin:auto;
-	max-width:725px;
-	min-height:400px;
+	max-width:660px;
+	min-height:660px;
 	position:relative;
 	/*background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;*/
     background:url(https://image.winudf.com/v2/image1/bGl0dGxlYXBwYXMuZG9nLndhbGxwYXBlcnNfc2NyZWVuXzdfMTU2ODgyODc5M18wODg/screen-7.jpg?fakeurl=1&type=.jpg) no-repeat center;
@@ -109,7 +109,7 @@ a{color:inherit;text-decoration:none}
 .login-form .group .label,
 .login-form .group .input,
 .login-form .group .select{
-	/*width:100%;*/
+	width:100%;
 	color:#fff;
 	display:block;
 }
