--- a/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Historial/DetalleHist.cshtml
+++ b/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Historial/DetalleHist.cshtml
@@ -15,13 +15,13 @@
 					<label for="user" class="label">Visita</label>
 					<input id="user" type="text" class="input">
 				</div>
+				<div class="hr"></div>
 				<div class="group">
 					<input type="submit" class="button" value="Guardar">
 					<input type="submit" class="button" value="Consultar">
 					<input type="submit" class="button" value="Modificar">
 					<input type="submit" class="button" value="Eliminar">
 				</div>
-				<div class="hr"></div>
 			</div>
 		</div>
 	</div>
@@ -41,8 +41,8 @@ a{color:inherit;text-decoration:none}
 .login-wrap{
 	width:100%;
 	margin:auto;
-	max-width:525px;
-	min-height:525px;
+	max-width:660px;
+	min-height:400px;
 	position:relative;
 	/*background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;*/
     background:url(https://image.winudf.com/v2/image1/bGl0dGxlYXBwYXMuZG9nLndhbGxwYXBlcnNfc2NyZWVuXzdfMTU2ODgyODc5M18wODg/screen-7.jpg?fakeurl=1&type=.jpg) no-repeat center;
@@ -100,7 +100,7 @@ a{color:inherit;text-decoration:none}
 .login-form .group .label,
 .login-form .group .input,
 .login-form .group .select{
-	width:100%;
+	/*width:100%;*/
 	color:#fff;
 	display:block;
 }
@@ -177,10 +177,11 @@ a{color:inherit;text-decoration:none}
 
 .hr{
 	height:2px;
-	margin:60px 0 50px 0;
+	margin:10px 0 10px 0;
 	background:rgba(255,255,255,.2);
 }
 .foot-lnk{
 	text-align:center;
 }
+
 </style>
