Se implementa CRUD a raza falta eliminar

--- a/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/VeterinariaWeb.App/VeterinariaWeb.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - VeterinariaWeb.App.Frontend</title>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -31,13 +32,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/HistoriaClinica/HistoriaClinica">Historia Clínica</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Historial/DetalleHist">Detalle Historial</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/DetalleHistorial/DetalleHist">Detalle Historial</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Generos/Genero">Género</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Razas/Raza">Raza</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Razas/List">Raza</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Mascota/Mascota">Datos Mascota</a>
